--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
     <script src="p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
+<style>
 
+body{
+  background: url(images/roses.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+}
+
+</style>
   </head>
   <body>
     <script src="sketch.js"></script>
-  
+
 
 </body></html>
