--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@ body{
   </head>
   <body>
     <script src="sketch.js"></script>
-
+<button type="button" name="button" id="makeRainSound">Rain</button>
 
 </body></html>
