--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ body{
   </head>
   <body>
     <script src="sketch.js"></script>
-<button type="button" name="button" id="makeRainSound">Rain</button>
+<center><button type="button" name="button" id="makeRainSound">Rain</button>
+</center>
 
 </body></html>
