--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@ body{
     <script src="sketch.js"></script>
 <center><button type="button" name="button" id="makeRainSound">Rain</button>
 </center>
-
+<button type="button" name="button" id="makeBees">Bees</button>
+<button type="button" name="button" id="makeSpringPeepers">Peepers</button>
+<button type="button" name="button" id="thunder">Thunderstorm</button>
+<button type="button" name="button" id="makeWaterSpill">Watering Flowers</button>
 
 </body></html>
