--- a/index.html
+++ b/index.html
@@ -23,5 +23,7 @@ body{
 <button type="button" name="button" id="makeSpringPeepers">Peepers</button>
 <button type="button" name="button" id="thunder">Thunderstorm</button>
 <button type="button" name="button" id="makeWaterSpill">Watering Flowers</button>
+<button type="button" name="button" id="reverbButton">Add Reverb</button>
+<button type="button" name="button" id="delayButton">Add Delay</button>
 
 </body></html>
