--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
 <style>
 
-/*body{
+body{
   background: url(images/roses.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
-}*/
+}
 
 </style>
   </head>
